Fix jumpy page on highlight due to scrollbar

--- a/src/view/components/Highlighter.css
+++ b/src/view/components/Highlighter.css
@@ -72,3 +72,12 @@
 .fixed.fixedBottom {
 	bottom: 1.5em;
 }
+
+.outerContainer {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	overflow: hidden;
+}
